package com.quantumSamurais.hams.database;

public enum RequestStatus {
    APPROVED,
    PENDING,
    REJECTED
}
