package com.quantumSamurais.hams.login;

public enum LoginStatusCodes {
    //Types of login returns
    SUCCESS,
    USER_DOES_NOT_EXIST,
    INCORRECT_PASSWORD,
    REQUEST_ERROR
}
