package com.quantumSamurais.hams.user;

public enum UserType {
    //Types of users
    DOCTOR,
    PATIENT,
    ADMIN
}
