package com.quantumSamurais.hams.utils;

public enum ValidationTaskResult {
        INVALID_FORMAT,
        INVALID_DOMAIN,
        INVALID_LOCAL_EMAIL_ADDRESS,
        ATTRIBUTE_ALREADY_REGISTERED,
        ATTRIBUTE_IS_FREE_TO_USE,
        VALID,
        ERROR

}
