package com.quantumSamurais.hams.utils;

public enum ValidationType {
    EMAIL_ADDRESS,
    PHONE_NUMBER,
    HEALTH_CARD_NUMBER,
    EMPLOYEE_NUMBER
}
